# r-type

./: .gitignore  CMakeLists.txt  Core.cpp  Core.hpp  GameScreen.cpp  GameScreen.hpp  IState.cpp  IState.hpp  MenuScreen.cpp  MenuScreen.hpp  OptionsScreen.cpp  OptionsScreen.hpp  SplashScreen.cpp  SplashScreen.hpp  main.cpp
assets/: ghost.lua
assets/map1/: map1.Ug  map1.ini  map1.json  mothership.Ug  mothership.json  shipTile.json  shipTileB.json  shipTileBackground.json  tile1.json  voidTileEvent.json
client/: CMakeLists.txt  Core.cpp  Core.hpp  GameScreen.cpp  GameScreen.hpp  IState.hpp  MenuScreen.cpp  MenuScreen.hpp  OptionsScreen.cpp  OptionsScreen.hpp  README_CLIENT  SplashScreen.cpp  SplashScreen.hpp
client/Game/include/: AnimatedSprite.hpp  Animation.hpp  Core.hpp  CoreInfo.hpp  EntityFunc.hpp  ILib.hpp  KeyHandler.hpp  Map.hpp  MapConfHandler.hpp  MapTile.hpp  Menu.hpp  Options.hpp  Ship.hpp  ShipProjectile.hpp  UGL.hpp  World.hpp
client/Game/src/: AnimatedSprite.cpp  Animation.cpp  Core.cpp  CoreInfo.cpp  EntityFunc.cpp  Map.cpp  MapConfHandler.cpp  Menu.cpp  Options.cpp  Ship.cpp  ShipProjectile.cpp  UGL.cpp  World.cpp  keyHandler.cpp  main.cpp
client/Lib/include/: AnimatedSprite.hpp  Animation.hpp  EntityGraphique.hpp  ILib.hpp  UGL.hpp
client/Lib/src/: AnimatedSprite.cpp  Animation.cpp  UGL.cpp
client/Network/include/: ClientUdp.hpp  IClientUdpSocket.hpp  RFCClientGameHandler.hpp  RFCClientHandler.hpp  RFCRoomHandler.hpp
client/Network/src/: ClientUdp.cpp  RFCClientGameHandler.cpp  RFCClientHandler.cpp  RFCRoomHandler.cpp
client/State/include/: ConnexionState.hpp  Core.hpp  GameScreen.hpp  GameState.hpp  IState.hpp  LobbyState.hpp  MenuScreen.hpp  MenuState.hpp  OptionsScreen.hpp  OptionsState.hpp  ReadyState.hpp  SplashScreen.hpp  SplashState.hpp
client/State/src/: ConnexionState.cpp  Core.cpp  GameScreen.cpp  GameState.cpp  LobbyState.cpp  MenuScreen.cpp  MenuState.cpp  OptionsScreen.cpp  OptionsState.cpp  ReadyState.cpp  SplashScreen.cpp  SplashState.cpp
clientUDP/: CMakeLists.txt  clientudp.cpp
clientUDP/include/: ClientTCP.hpp  ClientUdp.hpp  Message.hpp  MessageQueue.hpp  RFCClientGameHandler.hpp  RFCClientHandler.hpp  RFCProtocol.hpp  RFCRoomHandler.hpp  Random.h
clientUDP/src/: ClientTCP.cpp  ClientUdp.cpp  RFCCLientHandler.cpp  RFCClientGameHandler.cpp  RFCClientHandler.cpp  RFCRoomHandler.cpp  Random.cpp  main.cpp
server/: CMakeLists.txt  Conception.docx  README_SERVER
server/assets/: entities.lua
server/assets/map1/: mothership.Ug  mothership.json  voidTile.json
server/client/: CMakeLists.txt
server/client/Game/include/: CoreInfo.hpp  EntityFunc.hpp  KeyHandler.hpp
server/client/Game/src/: Core.cpp  main.cpp
server/client/Lib/include/: Animation.hpp
server/client/Lib/src/: AnimatedSprite.cpp
server/client/Network/include/: RFCClientGameHandler.hpp  RFCRoomHandler.hpp
server/client/Network/src/: ClientUdp.cpp
server/client/State/include/: GameState.hpp  IState.hpp  LobbyState.hpp
server/client/State/src/: LobbyState.cpp  MenuState.cpp  OptionsState.cpp  SplashState.cpp
server/include/: AGameEntity.hpp  Bullet.hpp  Game.hpp  IRFCHandler.hpp  IServerUdpSocket.hpp  Message.hpp  MessageQueue.hpp  RFCGameHandler.hpp  RFCHandler.hpp  RFCProtocol.hpp  RFCServerRoomHandler.hpp  Room.hpp  RoomInfo.hpp  RoomPool.hpp  ServerCore.hpp  ServerUdp.hpp  Ship.hpp
server/server/include/: Bullet.hpp  GameEFunc.hpp  RFCGameHandler.hpp  RFCServerRoomHandler.hpp  Random.h  Room.hpp  RoomInfo.hpp  RoomPool.hpp  ServerCore.hpp  ServerUdp.hpp  Ship.hpp
server/server/src/: AGameEntity.cpp  Game.cpp  GameEFunc.cpp  RFCHandler.cpp  Room.cpp  RoomInfo.cpp  RoomPool.cpp  Rtype.cpp  ServerCore.cpp
server/src/: AGameEntity.cpp  Bullet.cpp  Game.cpp  RFCGameHandler.cpp  RFCHandler.cpp  RFCServerRoomHandler.cpp  Room.cpp  RoomInfo.cpp  RoomPool.cpp  Rtype.cpp  ServerCore.cpp  ServerUdp.cpp  Ship.cpp
server/uselesstcp/: ClientManager.cpp  ClientManager.hpp  ClientSocket.cpp  ClientSocket.hpp  IClientSocket.h  IServerSocket.h  Network.cpp  Network.h  OnSocketEvent.h  ServerTcp.cpp  ServerTcp.h
server/utils/: README_UTILS  RTypeException.hpp
server/utils/GameEngine/include/: AComponent.hpp  AGameEngine.hpp
server/utils/Protocol/: IRFCHandler.hpp  RFCProtocol.hpp
utils/: Random.h
utils/ECS/include/: Component.hpp  Entity.hpp
utils/GameEngine/include/: AComponent.hpp  AEntity.hpp  AGameEngine.hpp  EngineDefinitions.hpp  Entity.hpp  FactoryEntity.hpp  GameEngine.hpp  LibGraph.hpp  MapConfHandler.hpp  TestComponent.hpp
utils/GameEngine/src/: AComponent.cpp  AEntity.cpp  AGameEngine.cpp  Entity.cpp  FactoryEntity.cpp  GameEngine.cpp  MapConfHandler.cpp  TestComponent.cpp
utils/Protocol/: IServerUdpSocket.hpp  Message.hpp  RFCProtocol.hpp
